[package]
name = "battle_ship"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[lints.clippy]
pedantic = "deny"
missing-const-for-fn = "deny"
unused-enumerate-index = "deny"
as-underscore = "deny"
str-to-string = "deny"
too-many-lines = "deny"
todo = "warn"
get-unwrap = "warn"
unwrap-used = "warn"
unwrap_in_result = "warn"
map_unwrap_or = "warn"

[dependencies]
bevy = { version = "=0.13.2", features = ["dynamic_linking"] }
rand = "=0.8.5"
